{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "LocomotionTopView",
            "id": "df12c6cb-f8f5-4c92-9f33-82a5bd36b704",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "71633047-4dbd-4303-8b74-ee5368f58398",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Side",
                    "id": "9958975b-6d8d-4e03-881d-6d8b8398246a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "95e4d5bd-5f84-48d6-a214-03dfd216b745",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "10844c9f-5647-40b5-98b9-6d35ef71b222",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "LocomotionSideView",
            "id": "870c0d2d-2159-4c29-9a7e-3c64e1199db5",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "35291e57-cec3-444e-9af9-139589bb1ed2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "187c252f-5a35-4279-a74c-37265e33ee06",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}